--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,4 @@ plotly.express
 streamlit_plotly_events
 datetime
 pickle
-sklearn.model_selection
-sklearn.ensemble
-sklearn.preprocessing
+scikit-learn
